zetasql/analyzer/testdata/multi_level_aggregation_udas_not_yet_supported.test
[default language_features=CREATE_AGGREGATE_FUNCTION,TEMPLATE_FUNCTIONS,MULTILEVEL_AGGREGATION]
[default show_sqlbuilder_output]

SELECT
  SumOfAggregateArgs(MAX(int64) GROUP BY string)
FROM SimpleTypes;
--
ERROR: GROUP BY modifiers are not yet supported on user-defined functions. [at 2:3]
  SumOfAggregateArgs(MAX(int64) GROUP BY string)
  ^
==

SELECT
  SumOfAggregateArgs(SumOfAggregateArgs(int64) GROUP BY string)
FROM SimpleTypes;
--
ERROR: GROUP BY modifiers are not yet supported on user-defined functions. [at 2:3]
  SumOfAggregateArgs(SumOfAggregateArgs(int64) GROUP BY string)
  ^
